another attempt at form update

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         <!-- end contacts data -->
                         <!-- contact form -->
                         <div class="col-md-6 col-12">
-                            <form class="coda-contact-form" action="https://formspree.io/ambermoreyra@gmail.com #" method="post">    
+                            <form class="coda-contact-form" action="https://formspree.io/ambermoreyra@gmail.com" method="post">    
                                 <div class="coda-input-box">
                                     <input id="coda-name" class="coda-input" type="text" required="" name="name">
                                     <label for="coda-name" class="coda-label">name</label>
