updated links to new tabs and skill descriptions

--- a/index.html
+++ b/index.html
@@ -301,31 +301,31 @@
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">MySQL</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">MySQL</span> - Adobe Photoshop is a raster graphics editor developed and published by Adobe Systems for macOS and Windows.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">MySQL</span> - MYSQL description</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">MongoDB</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">MongoDB</span> - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Systems.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">MongoDB</span> - MongoDB description</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">React.js</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">React.js</span> - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Systems.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">React.js</span> - React.js description</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">Laravel</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">Laravel</span> - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Systems.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">Laravel</span> - Laravel description</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">Express</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">Express</span> - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Systems.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">Express</span> - Express description</dd>
                                 </div>
                                 <!-- end skill term -->
                                 
@@ -370,7 +370,7 @@
                                 <!-- contact item -->
                                 <div class="coda-contact-item">
                                     <dt class="coda-contact-name">find me on</dt>
-                                    <dd class="coda-contact-data"><a href="https://www.linkedin.com/in/amber-moreyra-a2082870/" class="coda-contact-link coda-underscore">LinkedIn</a><a href="https://github.com/ambermoreyra" class="coda-contact-link coda-underscore">GitHub</a></dd>
+                                    <dd class="coda-contact-data"><a href="https://www.linkedin.com/in/amber-moreyra-a2082870/" target="_blank" class="coda-contact-link coda-underscore">LinkedIn</a><a href="https://github.com/ambermoreyra" target="_blank" class="coda-contact-link coda-underscore">GitHub</a></dd>
                                 </div>
                                 <!-- end contact item -->
                             </dl>
@@ -471,7 +471,7 @@
                                             <dt class="coda-description-name">location:</dt>
                                             <dd class="coda-description-data">denver, co</dd>
                                             <dt class="coda-description-name">resume:</dt>
-                                            <dd class="coda-description-data"><a href="img/moreyra_resume.pdf" class="coda-contact-link coda-underscore">click here</a</dd>
+                                            <dd class="coda-description-data"><a href="img/moreyra_resume.pdf" target="_blank" class="coda-contact-link coda-underscore">click here</a</dd>
                                         </div>
                                     </dl>
                                 </footer>
