updated resume and about me

--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
                                 <header class="coda-pop-up-header">
                                     <h3>about me</h3>
                                 </header>
-                                <p>My name is Amber Moreyra, and I am an aspiring web developer currently enrolled in the University of Denver's full stack coding bootcamp with anticipated completion in September 2019.</p>
-                                <p>As a project manager, I excel at process mapping and overall project oversight.</p>
+                                <p>My name is Amber Moreyra, and I am a recent graduate of the University of Denver's Full Stack Web Development bootcamp.</p>
+                                <p>Building and maintaining strong working relationships as well as minimizing processes have fueled me throughout my career. My collaborative and transparent leadership style is exemplified by asking clarifying questions and understanding and advocating for others’ needs. I hope to combine my newly acquired skill set with my soft skills to support teams’ success in delivering high-value solutions and continuous improvement. </p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
