updated new last name and resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
 
-        <title>portfolio | amber moreyra</title>
+        <title>portfolio | amber faith carter</title>
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -132,7 +132,7 @@
                                 <p class="coda-profession">web developer</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
-                                <h1 class="coda-name">amber moreyra</h1>
+                                <h1 class="coda-name">amber faith carter</h1>
                                 <!-- end first name, last Name -->
                                 <!-- "About me" button -->
                                 <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"></i></a>
@@ -379,7 +379,7 @@
                                 <!-- contact item -->
                                 <div class="coda-contact-item">
                                     <dt class="coda-contact-name">email:</dt>
-                                    <dd class="coda-contact-data"><a href="mailto:ambermoreyra@gmail.com" class="coda-contact-link coda-underscore">ambermoreyra@gmail.com</a></dd>
+                                    <dd class="coda-contact-data"><a href="mailto:amberfaithcarter17@gmail.com" class="coda-contact-link coda-underscore">amberfaithcarter17@gmail.com</a></dd>
                                 </div>
                                 <!-- end contact item -->
                                 <!-- contact item -->
@@ -427,7 +427,7 @@
                             <p class="coda-footer-copyright">Copyright &copy; 2019</p>
                         </div>
                         <div class="col-md-6 col-12">
-                            <h4 class="coda-footer-info">amber moreyra</h4>
+                            <h4 class="coda-footer-info">amber faith carter</h4>
                         </div>
                     </div>
                 </div>
@@ -478,7 +478,7 @@
                                 <header class="coda-pop-up-header">
                                     <h3>about me</h3>
                                 </header>
-                                <p>My name is Amber Moreyra, and I am a recent graduate of the University of Denver's Full Stack Web Development bootcamp.</p>
+                                <p>My name is Amber Carter, and I am a recent graduate of the University of Denver's Full Stack Web Development bootcamp.</p>
                                 <p>Building and maintaining strong working relationships as well as minimizing processes have fueled me throughout my career. My collaborative and transparent leadership style is exemplified by asking clarifying questions and understanding and advocating for others’ needs. I hope to combine my newly acquired skill set with my soft skills to support teams’ success in delivering high-value solutions and continuous improvement. </p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
